# winepredict

./: .readthedocs.yaml  ChrisLawrence_v1.ipynb  LICENSE.md  README.md  WinePredict.ipynb  pyproject.toml  readthedocs.yaml  winepredict.py
docs/: api_reference.rst  conf.py  data_processing.rst  index.rst  introduction.rst  model_evaluation.rst  model_training.rst  usage.rst  visualization.rst
winepredict/: __init__.py  data_processing.py  info.py  model_evaluation.py  model_training.py  visualization.py
