[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "winepredict"
version = "0.1.0"
description = "A library for predicting wine prices using machine learning models."
authors = [
    { name="Chris Lawrence", email="ulmo.edu@hotmail.co.uk" }
]
dependencies = [
    "numpy",
    "pandas",
    "seaborn",
    "matplotlib",
    "scikit-learn",
    "xgboost",
    "lightgbm",
    "catboost",
    "openpyxl",
    "requests",
    "dask[dataframe]",
    "torch",
    "torchvision",
    "torchaudio"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["winepredict"]
